--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 <body style="display: flex; flex-wrap: wrap;">
   <Header srcpars="html-components/Header.html" data-attribute-1="public/vite.svg" data-text-1="SERGIUS"
     data-text-2="Little description" data-text-3="Super btn" />
-  <Header srcpars="html-components/Header.html" data-mark-1="Heloyin" />
+  <Header srcpars="html-components/Header.html" data-text-1="description Bro" />
   <Header srcpars="html-components/Header.html" data-attribute-1="public/vite.svg" data-text-1="Title"
     data-text-2="description Bro" data-text-3="Super btn" />
   <Header srcpars="html-components/Header.html" data-attribute-1="public/vite.svg" data-text-1="Hello bro"
     data-text-2="Super description" data-text-3="Super btn" />
-  <Header srcpars="html-components/Header.html" data-attribute-1="public/vite.svg" data-text-1="SERGIUS"
-    data-text-2="Little description" data-text-3="Super btn" />
+  <Header srcpars="html-components/Header.html" data-attribute-1="public/vite.svg" />
   <Header srcpars="html-components/Header.html" data-mark-1="Heloyin" />
   <Header srcpars="html-components/Header.html" data-attribute-1="public/vite.svg" data-text-1="Title"
     data-text-2="description Bro" data-text-3="Super btn" />
